# et_sandbox

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  README.md  sandbox.code-workspace  sandbox.ioc  stm32h533retx_FLASH.ld
Inc/: main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  usart.h
Src/: gpdma.c  gpio.c  icache.c  main.c  stm32h5xx_it.c  usart.c
Startup/: startup_stm32h533retx.s
cmake/: vscode_generated.cmake
cmake/stm32cubemx/: CMakeLists.txt
source/config/shell/: shell_config.c  shell_config.h
source/config/tasks/: scheduler_config.h  task_config.c  task_config.h
source/config/trace/: trace_log_config.c  trace_log_config.h
